* first implementation of passing data via area to app_server   this makes printing of large images work, fixes task #1067

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27214 a95241bf-73f2-0310-859d-f6bbb57e9c96